Implement initial version of Dijkstra

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Maze Solver</title>
+    <title>aMaze Solver</title>
     <script src="https://cdn.jsdelivr.net/npm/p5@1.8.0/lib/p5.js"></script>
     <link rel="stylesheet" href="styles.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -13,7 +13,7 @@
 <body>
     
     <div>
-        <h1 id="main-title">Maze Solver</h1>
+        <h1 id="main-title">aMaze Solver</h1>
         <h3>Select the dimensions of your maze, then the algorithm to solve it with.</h3>
     </div>
 
